application-1/auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: auth-deployment
  labels: 
    app.kubernetes.io/part-of: application-1
    app.kubernetes.io/name: auth
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: auth-1
    app.kubernetes.io/version: "1.0"
  annotations:
    app.openshift.io/vcs-uri: "git@github.com:redhat-developer/topology-example.git"
    app.openshift.io/vcs-ref: "v1.0.0"
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/part-of: application-1
      app.kubernetes.io/name: auth
      app.kubernetes.io/component: backend
      app.kubernetes.io/instance: auth-1
      app.kubernetes.io/version: "1.0"
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: application-1
        app.kubernetes.io/name: auth
        app.kubernetes.io/component: backend
        app.kubernetes.io/instance: auth-1
        app.kubernetes.io/version: "1.0"
    spec:
      containers:
        - name: auth
          image: nginx:1.7.9
          ports:
            - containerPort: 80
