application-1/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app.kubernetes.io/part-of: application-1
    app.kubernetes.io/name: ruby
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: auth-1
    app.kubernetes.io/version: "1.0"
  annotations:
    app.openshift.io/vcs-uri: "git@github.com:redhat-developer/topology-example.git"
    app.openshift.io/vcs-ref: "87345f27568d7a66d0d7a147e2207389358e5c1f"
spec:
  selector:
    app.kubernetes.io/part-of: application-1
    app.kubernetes.io/name: ruby
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: auth-1
    app.kubernetes.io/version: "1.0"
  ports:
    - port: 80
