application-1/auth/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: auth-route
  labels: 
    app.kubernetes.io/part-of: application-1
    app.kubernetes.io/name: ruby
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: auth-1
    app.kubernetes.io/version: "1.0"
  annotations:
    app.openshift.io/vcs-uri: "git@github.com:redhat-developer/topology-example.git"
    app.openshift.io/vcs-ref: "87345f27568d7a66d0d7a147e2207389358e5c1f"
spec:
  host: auth.io
  path: /
  to:
    kind: Service
    name: auth-service
